# ifm-ruta

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  WINDOWS_INSTALLATION.md  build-release.sh  build.sh  ifm-ruta.spec
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  dev.yml  release.yml  unified-release.yml
core/src/: lib.rs
core/src/models/: error.rs  feedback.rs  mod.rs  project.rs  settings.rs
core/src/services/: conversation_storage.rs  event_bus.rs  mod.rs  process_manager.rs  settings_manager.rs  validation.rs
core/src/traits/: command.rs  event.rs  mod.rs  process.rs  settings.rs  tool.rs  validation.rs
core/src/utils/: conversation_logger.rs  error_handling.rs  logging.rs  mod.rs  serialization.rs
egui/: Cargo.toml
egui/src/: main.rs
ifm-ruta-core/: Cargo.toml
ifm-ruta-core/src/: lib.rs
ifm-ruta-core/src/models/: settings.rs
ifm-ruta-core/src/traits/: event.rs  mod.rs  settings.rs  validation.rs
ifm-ruta-core/src/utils/: error_handling.rs  logging.rs  mod.rs  serialization.rs
ifm-ruta-egui/src/: main.rs
ifm-ruta-mcp/: Cargo.toml
ifm-ruta-mcp/src/: main.rs
ifm-ruta-mcp/src/tools/: mod.rs
installer/windows/: build-msi.sh  ifm-ruta.wxs
mcp/: Cargo.toml
mcp/src/: main.rs
mcp/src/mcp/: mod.rs  protocol.rs  server.rs
mcp/src/tools/: interactive_feedback.rs
scripts/: auto-fix.sh  build-unified.sh  build-windows.sh  build.sh  create-github-release.sh  create-unified-package.sh  create-windows-package.sh  debug-mcp.sh  pre-push-check.sh  push-with-checks.sh  restart-mcp.sh  test-mcp.sh
unified/: Cargo.toml
unified/src/: main.rs
unified/src/mcp/: mod.rs  protocol.rs  server.rs
unified/src/tools/: interactive_feedback.rs
