[package]
name = "ifm-ruta-egui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ifm-ruta-egui"
path = "src/main.rs"

[dependencies]
ifm-ruta-core = { path = "../ifm-ruta-core" }
eframe = { version = "0.28", features = ["default"] }
egui = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
# Font support
include_dir = "0.7"
chrono = { version = "0.4", features = ["serde"] }

