[package]
name = "ifm-ruta-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for Interactive Feedback MCP"

[[bin]]
name = "ifm-ruta-mcp"
path = "src/main.rs"

[dependencies]
# Core dependencies
ifm-ruta-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

# MCP dependencies
mcp = "0.1.0"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Process management
sysinfo.workspace = true
